// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiRadio is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiRadio testClass1 testClass2"
  data-test-subj="test subject string"
>
  <input
    class="euiRadio__input"
    id="id"
    type="radio"
  />
  <div
    class="euiRadio__circle"
  >
    <div
      class="euiRadio__check"
    />
  </div>
</div>
`;

exports[`EuiRadio props checked is rendered 1`] = `
<div
  class="euiRadio"
>
  <input
    checked=""
    class="euiRadio__input"
    id="id"
    type="radio"
  />
  <div
    class="euiRadio__circle"
  >
    <div
      class="euiRadio__check"
    />
  </div>
</div>
`;

exports[`EuiRadio props disabled is rendered 1`] = `
<div
  class="euiRadio"
>
  <input
    class="euiRadio__input"
    disabled=""
    id="id"
    type="radio"
  />
  <div
    class="euiRadio__circle"
  >
    <div
      class="euiRadio__check"
    />
  </div>
</div>
`;

exports[`EuiRadio props label is rendered 1`] = `
<div
  class="euiRadio"
>
  <input
    class="euiRadio__input"
    id="id"
    type="radio"
  />
  <div
    class="euiRadio__circle"
  >
    <div
      class="euiRadio__check"
    />
  </div>
  <label
    class="euiRadio__label"
    for="id"
  >
    <span>
      Label
    </span>
  </label>
</div>
`;
